# poolboy

./: CHANGELOG.md  README.md  cabal.project  flake.nix  poolboy.cabal
.github/workflows/: haskell-ci.yml  haskell.yml  nix.yml
effectful-poolboy/: CHANGELOG.md  LICENSE  README.md  effectful-poolboy.cabal
effectful-poolboy/src/Data/Poolboy/: Effectful.hs
effectful-poolboy/src/Data/Poolboy/Tactics/: Effectful.hs
effectful-poolboy/test/: Spec.hs
poolboy/: CHANGELOG.md  README.md
poolboy/src/Data/: Poolboy.hs
src/Data/: Poolboy.hs
src/Data/Poolboy/: Tactics.hs
test/: Spec.hs
